bizinikiwi/pezframe/support/test/tests/pezpallet_ui/pezpallet_struct_invalid_attr.stderr
error: expected `without_storage_info` or `storage_version`
  --> tests/pezpallet_ui/pezpallet_struct_invalid_attr.rs:24:15
   |
24 |     #[pezpallet::generate_storage_info] // invalid
   |                  ^^^^^^^^^^^^^^^^^^^^^
